--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
 
-MarkovAlgorithm_Zalomnova/.vs/MarkovAlgorithm_Zalomnova/v16/.suo
-MarkovAlgorithm_Zalomnova/.vs/MarkovAlgorithm_Zalomnova/v16/Browse.VC.db
-MarkovAlgorithm_Zalomnova/.vs/MarkovAlgorithm_Zalomnova/v16/Browse.VC.db-shm
-MarkovAlgorithm_Zalomnova/.vs/MarkovAlgorithm_Zalomnova/v16/Browse.VC.db-wal
-MarkovAlgorithm_Zalomnova/.vs/MarkovAlgorithm_Zalomnova/v16/Browse.VC.opendb
-MarkovAlgorithm_Zalomnova/.vs/MarkovAlgorithm_Zalomnova/v16/ipch/AutoPCH/25159cc848fa6539/MAIN.ipch
-MarkovAlgorithm_Zalomnova/.vs/MarkovAlgorithm_Zalomnova/v16/ipch/AutoPCH/c284833a19a4df33/MARKOVALGORITHM.ipch
+MarkovAlgorithm_Zalomnova/.vs
+MarkovAlgorithm_Zalomnova/x64
+MarkovAlgorithm_Zalomnova/MarkovAlgorithm_Zalomnova/x64
+MarkovAlgorithm_Zalomnova/x86
+MarkovAlgorithm_Zalomnova/MarkovAlgorithm_Zalomnova/x86
